--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <tbody>
     <tr>
       <td>[![3</td>
-      <td><a href="https://github.com/Swe-HimelRana/FreeProxyTool"><img src="https://image.ibb.co/i7qfav/withoutproxy.png" alt="Screenshot About" /></a>
+      <td><a href="https://github.com/Swe-HimelRana/FreeProxyTool"><img  src="https://image.ibb.co/i7qfav/withoutproxy.png" alt="Screenshot About" /></a>
       </td>
     </tr>
   </tbody>
@@ -90,7 +90,9 @@
   <tbody>
     <tr>
       <td>[![3</td>
-      <td>Solid](https://image.ibb.co/jzJoTF/withproxy.png)](https://github.com/Swe-HimelRana/FreeProxyTool)</td>
+      <td>
+<a href="https://github.com/Swe-HimelRana/FreeProxyTool"><img src="https://image.ibb.co/jzJoTF/withproxy.png" alt="Screenshot About" /></a>
+</td>
     </tr>
   </tbody>
 </table>
