--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <h2>You can easily get 40 Proxies per minute.</h2>
         </header>
         <section id="downloads" class="clearfix">
-          
+          <a href="https://github.com/Swe-HimelRana/FreeProxyTool" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/Swe-HimelRana/FreeProxyTool" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
 	  
           <a href="https://github.com/Swe-HimelRana/FreeProxyTool" id="view-on-github" class="button"><span>View on GitHub</span></a>
 	    
